# Kernel_Image_Processing

./: CMakeLists.txt  Channel_1.cpp  Channel_1.h  Channels_2.cpp  Channels_2.h  Channels_3.cpp  Channels_3.h  Channels_4.cpp  Channels_4.h  Color.cpp  Color.h  Effect.cpp  Effect.h  FourChannels.cpp  FourChannels.h  Image.cpp  Image.h  Image_Base.h  KernelImageGUiApp.cpp  KernelImageGUiApp.h  KernelImageGUiMain.cpp  KernelImageGUiMain.h  OneChannel.cpp  OneChannel.h  P6Image.cpp  P6Image.h  README.md  ThreeChannels.cpp  ThreeChannels.h  Transparent_Color.cpp  Transparent_Color.h  TwoChannels.cpp  TwoChannels.h  main.cpp
test/: CMakeLists.txt  ColorTest.cpp  ImageFixture.cpp  ImageTest.cpp  Transparent_ColorTest.cpp  runAllTests.cpp  test.ppm  test2.pgm
